--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
@@ -10,3 +10,45 @@ body {
 }
 
 /* Add styles here! */
+
+.intro-chunk {
+  padding: 0 25px;
+  margin: 0 auto;
+  max-width: 450px;
+  padding-bottom: 40px;
+}
+.title {
+  padding: 50px 0;
+}
+
+.intro-chunk p {
+  font-size: 1.5rem;
+}
+
+.intro-chunk strong {
+  color: cadetblue;
+}
+
+main {
+  background-color: grey;
+  padding: 50px;
+  border-top: rgb(80, 80, 80) solid 6px;
+}
+
+.card {
+  background-color: white;
+  padding: 8px 25px;
+  margin-left: -50px;
+  margin-right: -50px;
+  margin: 0 auto;
+  max-width: 900px;
+}
+
+.indented-heading {
+  margin: 0;
+  background-color: #f7d53e;
+  padding: 20px;
+  margin-left: -25px;
+  border-bottom: #8a7620 solid 6px;
+  max-width: 450px;
+}
